--- a/app/views/story_sets/story.html.erb
+++ b/app/views/story_sets/story.html.erb
@@ -5,25 +5,35 @@
     <div class="canvas-operation"></div>
     <div class="canvas-main"></div>
   </section>
-  <aside class="right">
+  <aside class="right" >
     <div class="header">
        <div class="left">
          <div class="avatar"></div>
-         <p class="name">wayne.wang</p>
-         <p class="time">2015.1.1</p>
+         <p class="name">wayne</p>
        </div>
       <div class="right">
-        <p>this is some introduction here</p>
+        <div id="project-desc" class="project-desc"> Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo,
+          tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+          malesuada magna mollis euismod. Donec sed odio dui. </div>
       </div>
     </div>
     <div class='list'>
-      <div class="item conversation">
-        <div class="avatar">
-          <p class="name">wangzixiao</p>
-          <p class="time">2014-01-01</p>
+      <div class="item chat">
+        <div class="info">
+          <div><a class="avatar"></a></div>
+          <div>
+            <p>Kevin Hollywood</p>
+            <p>2015-01-01</p>
+          </div>
+          <div>
+            <a class="delete"><i class="icon icon-remove"></i></a>
+          </div>
         </div>
-        <div class="content">sdfasdf</div>
-        <div class="operate"><i class="icon icon-remove"></i></div>
+        <div class="chat-content">
+            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo,
+            tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem
+            malesuada magna mollis euismod. Donec sed odio dui.
+        </div>
       </div>
       <div class="item attachment">
         <div class="avatar">
@@ -34,14 +44,14 @@
         <div class="operate"><i class="icon icon-remove"></i></div>
       </div>
     </div>
-    <div class='bottom'>
-      <a class="btn"><i class="icon  icon-upload"></i></a>
-      <input type="text" />
-      <i class="icon icon-reply reply"></i>
-    </div>
+    <!--<div class='bottom'>-->
+      <!--<a class="btn"><i class="icon  icon-upload"></i></a>-->
+      <!--<input type="text" />-->
+      <!--<i class="icon icon-reply reply"></i>-->
+    <!--</div>-->
   </aside>
   <div class="bottom">
-    <p>some basic info</p>
+    <p>The project was created in 2015.1.1 by Wayne</p>
   </div>
 </div>
 <!--<div class="story-set-show">-->
