--- a/app/assets/stylesheets/help.css.scss
+++ b/app/assets/stylesheets/help.css.scss
@@ -89,3 +89,8 @@ $background-grey:#f9f9f9;
   -moz-border-radius:6px;
   -webkit-border-radius:6px;
 }
+@mixin text-overflow-ellipsis{
+  text-overflow:ellipsis;
+  overflow:hidden;
+  white-space: nowrap;
+}
