generate chart for discussion

--- a/app/assets/stylesheets/basic.css.scss
+++ b/app/assets/stylesheets/basic.css.scss
@@ -3,7 +3,7 @@
 @import "main_part/btn.css.scss";
 @import "main_part/date_picker.css.scss";
 @import "main_part/message.css.scss";
-@import "libs/font-awesome.css";
+@import "/assets/libs/font-awesome.css";
 @import "libs/aero";
 @import "libs/chosen";
 @import "font.css.scss";
