--- a/app/assets/stylesheets/story_sets/canvasMain.css.scss
+++ b/app/assets/stylesheets/story_sets/canvasMain.css.scss
@@ -56,6 +56,12 @@
             color:darken($red,20%);
           }
         }
+        .cyanine{
+          color:darken($cyanine,10%);
+          &:hover{
+            color:darken($cyanine,40%);
+          }
+        }
       }
     }
   }
