--- a/app/views/story_sets/story.html.erb
+++ b/app/views/story_sets/story.html.erb
@@ -24,10 +24,10 @@
       <div class="left" id="canvas-main-left">
         <p class="title">Operations</p>
         <ul class="operation-list">
-          <li><a class="yellow" href="/story_sets/<%= @story_set_id %>/add_chart"><i class="icon icon-plus"></i> ADD CHART</a></li>
-          <li><a class="blue"><i class="icon icon-group"></i>INVITE PEOPLE</a></li>
-          <li><a class="blue"><i class="icon icon-ban-circle"></i>CLOSE ISSUE</a></li>
-          <li><a class="red"><i class="icon icon-minus"></i>DELETE</a></li>
+          <li><a class="cyanine" href="/story_sets/<%= @story_set_id %>/add_chart"><i class="icon icon-plus"></i> ADD CHART</a></li>
+          <li><a class="cyanine"><i class="icon icon-group"></i>INVITE PEOPLE</a></li>
+          <li><a class="cyanine"><i class="icon icon-ban-circle"></i>CLOSE ISSUE</a></li>
+          <li><a class="cyanine"><i class="icon icon-minus"></i>DELETE</a></li>
         </ul>
         <p class="title">Attachments</p>
         <ul class="attachment-list">
