--- a/app/assets/stylesheets/main_part/btn.css.scss
+++ b/app/assets/stylesheets/main_part/btn.css.scss
@@ -83,4 +83,15 @@
     padding:5px 26px;
     font-size:12px;
   }
+  &.btn-discussion{
+    background:$cyanine;
+    background:-moz-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 10%,rgba(167,192,196, 0.2) 55%) $cyanine;
+    background:-webkit-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 10%,rgba(167,192,196, 0.2) 55%) $cyanine;
+    color:#fff;
+    &:hover{
+      background:$cyanine;
+      background:-moz-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 10%,rgba(167,192,196, 0.2) 55%) $cyanine;
+      background:-webkit-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 10%,rgba(167,192,196, 0.2) 55%) $cyanine;
+    }
+  }
 }
