--- a/app/assets/stylesheets/basic.css.scss
+++ b/app/assets/stylesheets/basic.css.scss
@@ -259,7 +259,7 @@ i{
 }
 /*************************************************************  input\select format
 *********************************************************************************************************/
-input[type="text"],input[type="password"]{
+input[type="text"],input[type="password"],input[type="number"]{
   width:230px;
   padding:8px 5px;
   color:#555;
