--- a/app/assets/stylesheets/story_sets/addChart.css.scss
+++ b/app/assets/stylesheets/story_sets/addChart.css.scss
@@ -154,6 +154,72 @@
     float:left;
     width:calc(100% - 320px);
     height:100%;
+    display:none;
     @include box-sizing-border;
+    .info{
+      height:100px;
+      width:100%;
+      @include box-sizing-border;
+      .date-mark{
+        text-align: right;
+        padding-right:10px;
+      }
+      .chart-type{
+        float:right;
+        display: block;
+        padding-right:10px;
+        li{
+          $width:48px;
+          float:left;
+          display: inline-block;
+          width:$width;
+          height:$width;
+          margin-right:6px;
+          @include border-radius-same(5px);
+          background:-moz-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 10%,rgba(95, 169, 218, 0.2) 55%) #5fa9da;
+          background:-webkit-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 10%,rgba(95, 169, 218, 0.2) 55%) #5fa9da;
+          @include transition(background);
+          cursor:pointer;
+          &:hover,&.active{
+            background:-moz-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 10%,rgba(105, 174, 245, 0.2) 55%) #69aef5;
+            background:-webkit-linear-gradient(top,rgba(255,255,255,0.5) 0%,rgba(255,255,255,0.5) 10%,rgba(105, 174, 245, 0.2) 55%) #69aef5;
+          }
+          a{
+            width:100%;
+            height:100%;
+            display:block;
+            background-image:url(/assets/dashboard-add-type.png);
+            background-repeat:no-repeat;
+            pointer-events:none;
+          }
+          &[name="line"]{
+            a{
+              background-position:center 3px;
+            }
+          }
+          &[name="column"]{
+            a{
+              background-position:center -44px;
+            }
+          }
+          &[name="pie"]{
+            a{
+              background-position:center -91px;
+            }
+          }
+          &[name="scatter"]{
+            a{
+              background-position:center -140px;
+            }
+          }
+        }
+      }
+    }
+    .chart{
+      height:calc(100% - 100px);
+      width:100%;
+      @include box-sizing-border;
+      background:#fff;
+    }
   }
 }
