--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -386,17 +386,17 @@ var INTERVAL_DASH = null;
         $("body").on('click',"#dashboard-full-size",function(){
             var args=[
                         {kpi: "E1", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 100, everyDay: false, time_range: null},
-                        {kpi: "PPM_L", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 100, everyDay: false, time_range: null},
+                        {kpi: "Achieved rate of PPM", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 100, everyDay: false, time_range: null},
                         {kpi: "RFT_L", departmentArray: ["MB", "GM", "VW", "CAPSA"], interval: 100, everyDay: false, time_range: null},
                         {kpi: "OEE_L", departmentArray: ["BU-MB", "BU-GM", "BU-VW", "BU-CAPSA"], interval: 100, everyDay: false, time_range: null},
                         //WEEK
                         {kpi: "E1", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 200, everyDay: false, time_range: null},
-                        {kpi: "PPM_L", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 200, everyDay: false, time_range: null},
+                        {kpi: "Achieved rate of PPM", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 200, everyDay: false, time_range: null},
                         {kpi: "RFT_L", departmentArray: ["MB", "GM", "VW", "CAPSA"], interval: 200, everyDay: false, time_range: null},
                         {kpi: "OEE_L", departmentArray: ["BU-MB", "BU-GM", "BU-VW", "BU-CAPSA"], interval: 200, everyDay: false, time_range: null},
                         //MONTH
                         {kpi: "E1", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 300, everyDay: false, time_range: null},
-                        {kpi: "PPM_L", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 300, everyDay: false, time_range: null},
+                        {kpi: "Achieved rate of PPM", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 300, everyDay: false, time_range: null},
                         {kpi: "RFT_L", departmentArray: ["MB", "GM", "VW", "CAPSA"], interval: 300, everyDay: false, time_range: null},
                         {kpi: "OEE_L", departmentArray: ["BU-MB", "BU-GM", "BU-VW", "BU-CAPSA"], interval: 300, everyDay: false, time_range: null},
 
@@ -407,11 +407,11 @@ var INTERVAL_DASH = null;
                         {kpi: "E1", departmentArray: ['Cutting'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
                         {kpi: "E1", departmentArray: ["CAPSA"], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
                         //PPM last 4 week
-                        {kpi: "PPM_L", departmentArray: ['MB'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
-                        {kpi: "PPM_L", departmentArray: ['GM'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
-                        {kpi: "PPM_L", departmentArray: ['VW'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
-                        {kpi: "PPM_L", departmentArray: ['Cutting'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
-                        {kpi: "PPM_L", departmentArray: ['CAPSA'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                        {kpi: "Achieved rate of PPM", departmentArray: ['MB'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                        {kpi: "Achieved rate of PPM", departmentArray: ['GM'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                        {kpi: "Achieved rate of PPM", departmentArray: ['VW'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                        {kpi: "Achieved rate of PPM", departmentArray: ['Cutting'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                        {kpi: "Achieved rate of PPM", departmentArray: ['CAPSA'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
                         //RFT last 4 week
                         {kpi: "RFT_L", departmentArray: ['MB'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
                         {kpi: "RFT_L", departmentArray: ['GM'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
@@ -429,11 +429,11 @@ var INTERVAL_DASH = null;
                         {kpi: "E1", departmentArray: ['Cutting'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
                         {kpi: "E1", departmentArray: ['CAPSA'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
                         //PPM last 7 day
-                        {kpi: "PPM_L", departmentArray: ['MB'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
-                        {kpi: "PPM_L", departmentArray: ['GM'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
-                        {kpi: "PPM_L", departmentArray: ['VW'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
-                        {kpi: "PPM_L", departmentArray: ['Cutting'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
-                        {kpi: "PPM_L", departmentArray: ['CAPSA'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                        {kpi: "Achieved rate of PPM", departmentArray: ['MB'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                        {kpi: "Achieved rate of PPM", departmentArray: ['GM'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                        {kpi: "Achieved rate of PPM", departmentArray: ['VW'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                        {kpi: "Achieved rate of PPM", departmentArray: ['Cutting'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                        {kpi: "Achieved rate of PPM", departmentArray: ['CAPSA'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
                         //RFT last 7 day
                         {kpi: "RFT_L", departmentArray: ['MB'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
                         {kpi: "RFT_L", departmentArray: ['GM'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
@@ -523,17 +523,17 @@ var INTERVAL_DASH = null;
             INTERVAL_DASH = window.setInterval(function(){
                 var args=[
                             {kpi: "E1", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 100, everyDay: false, time_range: null},
-                            {kpi: "PPM_L", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 100, everyDay: false, time_range: null},
+                            {kpi: "Achieved rate of PPM", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 100, everyDay: false, time_range: null},
                             {kpi: "RFT_L", departmentArray: ["MB", "GM", "VW", "CAPSA"], interval: 100, everyDay: false, time_range: null},
                             {kpi: "OEE_L", departmentArray: ["BU-MB", "BU-GM", "BU-VW", "BU-CAPSA"], interval: 100, everyDay: false, time_range: null},
                             //WEEK
                             {kpi: "E1", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 200, everyDay: false, time_range: null},
-                            {kpi: "PPM_L", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 200, everyDay: false, time_range: null},
+                            {kpi: "Achieved rate of PPM", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 200, everyDay: false, time_range: null},
                             {kpi: "RFT_L", departmentArray: ["MB", "GM", "VW", "CAPSA"], interval: 200, everyDay: false, time_range: null},
                             {kpi: "OEE_L", departmentArray: ["BU-MB", "BU-GM", "BU-VW", "BU-CAPSA"], interval: 200, everyDay: false, time_range: null},
                             //MONTH
                             {kpi: "E1", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 300, everyDay: false, time_range: null},
-                            {kpi: "PPM_L", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 300, everyDay: false, time_range: null},
+                            {kpi: "Achieved rate of PPM", departmentArray: ["MB", "GM", "VW", "Cutting", "CAPSA"], interval: 300, everyDay: false, time_range: null},
                             {kpi: "RFT_L", departmentArray: ["MB", "GM", "VW", "CAPSA"], interval: 300, everyDay: false, time_range: null},
                             {kpi: "OEE_L", departmentArray: ["BU-MB", "BU-GM", "BU-VW", "BU-CAPSA"], interval: 300, everyDay: false, time_range: null},
 
@@ -544,11 +544,11 @@ var INTERVAL_DASH = null;
                             {kpi: "E1", departmentArray: ['Cutting'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
                             {kpi: "E1", departmentArray: ["CAPSA"], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
                             //PPM last 4 week
-                            {kpi: "PPM_L", departmentArray: ['MB'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
-                            {kpi: "PPM_L", departmentArray: ['GM'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
-                            {kpi: "PPM_L", departmentArray: ['VW'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
-                            {kpi: "PPM_L", departmentArray: ['Cutting'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
-                            {kpi: "PPM_L", departmentArray: ['CAPSA'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                            {kpi: "Achieved rate of PPM", departmentArray: ['MB'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                            {kpi: "Achieved rate of PPM", departmentArray: ['GM'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                            {kpi: "Achieved rate of PPM", departmentArray: ['VW'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                            {kpi: "Achieved rate of PPM", departmentArray: ['Cutting'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
+                            {kpi: "Achieved rate of PPM", departmentArray: ['CAPSA'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
                             //RFT last 4 week
                             {kpi: "RFT_L", departmentArray: ['MB'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
                             {kpi: "RFT_L", departmentArray: ['GM'], interval: 200, everyDay: true, time_range: "LAST4WEEK"},
@@ -566,11 +566,11 @@ var INTERVAL_DASH = null;
                             {kpi: "E1", departmentArray: ['Cutting'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
                             {kpi: "E1", departmentArray: ['CAPSA'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
                             //PPM last 7 day
-                            {kpi: "PPM_L", departmentArray: ['MB'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
-                            {kpi: "PPM_L", departmentArray: ['GM'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
-                            {kpi: "PPM_L", departmentArray: ['VW'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
-                            {kpi: "PPM_L", departmentArray: ['Cutting'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
-                            {kpi: "PPM_L", departmentArray: ['CAPSA'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                            {kpi: "Achieved rate of PPM", departmentArray: ['MB'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                            {kpi: "Achieved rate of PPM", departmentArray: ['GM'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                            {kpi: "Achieved rate of PPM", departmentArray: ['VW'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                            {kpi: "Achieved rate of PPM", departmentArray: ['Cutting'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
+                            {kpi: "Achieved rate of PPM", departmentArray: ['CAPSA'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
                             //RFT last 7 day
                             {kpi: "RFT_L", departmentArray: ['MB'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
                             {kpi: "RFT_L", departmentArray: ['GM'], interval: 100, everyDay: true, time_range: "LAST7DAY"},
